// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formats all should return css/variables as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

:root {

}
"
`;

exports[`formats all should return javascript/es6 as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

"
`;

exports[`formats all should return javascript/module as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

module.exports = {
  \\"color\\": {
    \\"red\\": {
      \\"value\\": \\"#FF0000\\"
    }
  }
};"
`;

exports[`formats all should return javascript/object as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

var _styleDictionary = {
  \\"color\\": {
    \\"red\\": {
      \\"value\\": \\"#FF0000\\"
    }
  }
};"
`;

exports[`formats all should return javascript/umd as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

(function(root, factory) {
  if (typeof module === \\"object\\" && module.exports) {
    module.exports = factory();
  } else if (typeof exports === \\"object\\") {
    exports[\\"_styleDictionary\\"] = factory();
  } else if (typeof define === \\"function\\" && define.amd) {
    define([], factory);
  } else {
    root[\\"_styleDictionary\\"] = factory();
  }
}(this, function() {
  return {
  \\"color\\": {
    \\"red\\": {
      \\"value\\": \\"#FF0000\\"
    }
  }
};
}))
"
`;

exports[`formats all should return json as a string 1`] = `
"{
  \\"color\\": {
    \\"red\\": {
      \\"value\\": \\"#FF0000\\"
    }
  }
}"
`;

exports[`formats all should return json/asset as a string 1`] = `"{}"`;

exports[`formats all should return less/icons as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

"
`;

exports[`formats all should return less/variables as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

"
`;

exports[`formats all should return scss/icons as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

"
`;

exports[`formats all should return scss/variables as a string 1`] = `
"/**
 * Do not edit directly
 * Generated on Sat Jan 01 2000 00:00:00 GMT+0000 (GMT)
 */

"
`;

exports[`formats all should return sketch/palette as a string 1`] = `
"{
  \\"compatibleVersion\\": \\"1.0\\",
  \\"pluginVersion\\": \\"1.1\\",
  \\"colors\\": []
}"
`;
